--- a/assets/src/css/face.css
+++ b/assets/src/css/face.css
@@ -1,3 +1,13 @@
+/**
+ *
+ * 表情
+ *
+ * @author  MaiCong <i@maicong.me>
+ * @link    https://github.com/maicong/stay
+ * @since   1.2.0
+ *
+ */
+
 .face {
   background-position: center;
   background-repeat: no-repeat;
