--- a/assets/src/css/stay.css
+++ b/assets/src/css/stay.css
@@ -159,7 +159,7 @@
 
 .header .header__back:before {
   position: absolute;
-  content: "←";
+  content: "M";
   width: 100%;
   height: 100%;
   top: 0;
@@ -172,6 +172,11 @@
   background: #429083;
   box-shadow: inset 0 0 0 2px #fff;
   transform: rotateZ(-360deg) scale(1.3);
+}
+
+.header .header__back:hover:before,
+.header .header__back:active:before {
+  content: "←";
 }
 
 .main {
