--- a/assets/src/css/stay.css
+++ b/assets/src/css/stay.css
@@ -4,7 +4,7 @@
  *
  * @author  MaiCong <i@maicong.me>
  * @link    https://github.com/maicong/stay
- * @since   1.3.4
+ * @since   1.4.0
  *
  */
 
@@ -388,6 +388,54 @@
 .main .post__title a:active,
 .main .post__title a:hover {
   text-shadow: 0 0 0.25rem #316f65;
+}
+
+.main .post__text2speech {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  padding: 6px 12px;
+  color: #aaa;
+  background: #f3f3f3;
+  border: 1PX solid #eee;
+  border-radius: 6px;
+  user-select: none;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.main .post__text2speech .progress {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 100%;
+  border-bottom: 1PX solid #76bda3;
+}
+
+.main .post__text2speech .icon {
+  width: 24px;
+  height: 24px;
+  background: url(../img/audio_bg.png) center no-repeat;
+  background-size: 18px 22px;
+}
+
+.main .post__text2speech .text {
+  margin-left: 6px;
+}
+
+.main .post__text2speech .time {
+  flex: 1;
+  text-align: right;
+}
+
+.main .post__text2speech.isPlaying {
+  color: #888;
+}
+
+.main .post__text2speech.isPlaying .icon {
+  background-image: url(../img/audio_play.png)
 }
 
 .main .post__content {
