--- a/assets/src/css/stay.css
+++ b/assets/src/css/stay.css
@@ -396,6 +396,7 @@
   align-items: center;
   font-size: 14px;
   padding: 6px 12px;
+  margin-top: 24px;
   color: #aaa;
   background: #f3f3f3;
   border: 1PX solid #eee;
