Fix audio/video/embed css

--- a/assets/src/css/stay.css
+++ b/assets/src/css/stay.css
@@ -631,8 +631,11 @@
   overflow: auto;
 }
 
+.main .post__content audio,
+.main .post__content video,
 .main .post__content embed {
   max-width: 100%;
+  height: auto;
   margin: auto;
 }
 
