--- a/assets/src/css/stay.css
+++ b/assets/src/css/stay.css
@@ -1124,6 +1124,91 @@
   border-color: #08d;
 }
 
+.main .post__content .mc-audio {
+  position: relative;
+  width: 100%;
+  height: 38px;
+  line-height: 38px;
+  margin-bottom: 20px;
+  border: 1PX solid #eee;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.main .post__content .mc-audio__bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+  transform: translateX(-100%);
+}
+
+.main .post__content .mc-audio__ctl {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0 12px;
+}
+
+.main .post__content .mc-audio__ctl-btn {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.main .post__content .mc-audio__ctl-btn:before,
+.main .post__content .mc-audio__ctl-btn:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 6px;
+  bottom: 0;
+  width: 0;
+  height: 0;
+  margin: auto;
+  border-style: solid;
+  transition: all .2s;
+}
+
+.main .post__content .mc-audio__ctl-btn:before {
+  border-width: 12px 0 12px 24px;
+  border-color: transparent #ddd;
+}
+
+.main .post__content .mc-audio__ctl-btn:after {
+  left: 18px;
+  border-width: 12px 4px;
+  border-color: #ddd;
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.main .post__content .mc-audio__ctl-btn.play:before {
+  border-width: 12px 4px;
+  border-color: #ddd;
+}
+
+.main .post__content .mc-audio__ctl-btn.play:after {
+  border-width: 12px 4px;
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.main .post__content .mc-audio__ctl-time {
+  flex: 1;
+  font-size: 18px;
+  font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+  color: #ccc;
+  text-align: right;
+}
+
+.main .post__content .mc-audio__source {
+  display: none;
+}
+
 .main .post__tags {
   margin-top: 30px;
 }
